Py Sem 4 - Array list y botones validacion

--- a/AppSem04_1_GeoQuiz/app/src/main/res/values/strings.xml
+++ b/AppSem04_1_GeoQuiz/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="lima_es_la_capital_de_per">¿Lima es la capital de Perú?</string>
     <string name="sgte_pregunta">Sgte Pregunta</string>
     <string name="sgte">Sgte Pregunta</string>
+    <string name="test">Test</string>
 </resources>
